# relm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.adoc  appveyor.yml  faq.adoc  release_script.sh
.circleci/: config.yml
.github/: FUNDING.yml
examples/: README.md  async-attribute.rs  async-callback-attribute.rs  async-callback.rs  buttons-attribute.rs  buttons-child-attribute.rs  buttons-construct-prop-attribute.rs  buttons.glade  buttons.relm  buttons.rs  checkboxes.rs  child-event.rs  child-prop-attribute.rs  child-prop.rs  clock-attribute.rs  clock-nightly.rs  clock-nightly.rsx  clock.rs  communication-attribute.rs  communication-attribute.rsx  communication.rs  container-attribute.rs  container.rs  drawing.rs  generic-widget-attribute.rs  generic-widget.rs  grid-attributes.rs  http.rs  http.rsx  include.rs  key-events-attribute.rs  key-events.rs  model-param-attribute.rs  model-param-widget-attribute.rs  model-param.rs  model-params-attribute.rs  multi-container-attribute.rs  multi-container.rs  multi-generic-widget-attribute.rs  multi-generic-widget.rs  (+27 more)
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/buttons-attribute/: Cargo.toml
examples/buttons-attribute/src/: main.rs
examples/http/: Cargo.toml
examples/http/src/: main.rs
examples/webkit-test/: Cargo.toml
examples/webkit-test/src/: main.rs
fns-derive/: Cargo.toml
relm-attributes/: Cargo.toml
relm-attributes/src/: adder.rs  gen.rs  lib.rs  parser.rs  walker.rs
relm-core/: Cargo.toml  LICENSE
relm-core/examples/: main.rs
relm-core/src/: lib.rs  source.rs
relm-derive/: Cargo.toml
relm-derive-common/: Cargo.toml
relm-derive-common/src/: lib.rs
relm-derive-state/: Cargo.toml
relm-derive-state/src/: lib.rs
relm-derive/src/: lib.rs
relm-derive/tests/: ui.rs
relm-derive/tests/ui/: empty_view_macro.stderr
relm-derive/tests/ui/widget-attribute/: empty-view-macro.rs  empty-view-macro.stderr  no-model-method.rs  no-model-method.stderr  no-update-method.rs  no-update-method.stderr  unexpected-item.rs  unexpected-item.stderr  unexpected-type.rs  unexpected-type.stderr  widget-on-struct.rs  widget-on-struct.stderr
relm-easyfibers/: Cargo.toml
relm-examples/: Cargo.toml  README.md
relm-examples/examples/: async.rs  buttons-attribute.rs  buttons.rs  cambalache.rs  clock-attribute.rs  clock.rs  core.rs  direct-communication-attribute.rs  draw.rs  drawing.rs  glade.rs  glade_gladis.rs  headerbar.rs  menu.rs  multi-window.rs  multithread.rs  nested-view-attribute.rs  orphan-widgets-attribute.rs  readme-attributes.rs  readme.rs  tabs.rs  text-fields-attribute.rs  text-fields.rs  tree-view.rs  widget-list.rs  window.glade  window.ui
relm-examples/examples/7gui/1_counter/: Cargo.toml
relm-examples/examples/7gui/1_counter/src/: main.rs
relm-examples/examples/7gui/2_temperature_converter/: Cargo.toml
relm-examples/examples/7gui/2_temperature_converter/src/: main.rs
relm-examples/examples/7gui/3_flight_booker/: Cargo.toml
relm-examples/examples/7gui/3_flight_booker/src/: main.rs
relm-examples/examples/7gui/4_progress_bar/: Cargo.toml
relm-examples/examples/7gui/4_progress_bar/src/: main.rs
relm-examples/examples/7gui/5_crud/: Cargo.toml
relm-examples/examples/7gui/5_crud/src/: main.rs
relm-examples/examples/7gui/5_crud/src/gui/: mod.rs  person_list_box.rs  person_row.rs  win.rs
relm-examples/examples/7gui/5_crud/src/model/: mod.rs  person.rs  person_list.rs
relm-examples/examples/7gui/6_circle_drawer/: Cargo.toml
relm-examples/examples/7gui/6_circle_drawer/src/: main.rs
relm-examples/examples/7gui/6_circle_drawer/src/gui/: circle_drawing.rs  mod.rs  popup_menu.rs  win.rs  window_resize.rs
relm-examples/examples/7gui/6_circle_drawer/src/model/: circle.rs  circle_group.rs  history.rs  mod.rs
relm-examples/examples/7gui/7_cells/: Cargo.toml
relm-examples/examples/7gui/7_cells/src/: main.rs
relm-examples/examples/7gui/7_cells/src/gui/: cell.rs  mod.rs  popup_menu.rs  spreadsheet.rs  win.rs
relm-examples/examples/7gui/7_cells/src/model/: cell.rs  formula.rs  mod.rs  operations.rs  spreadsheet.rs
relm-examples/examples/async/: Cargo.toml
relm-examples/examples/async/src/: main.rs
relm-examples/examples/buttons-attribute/: Cargo.toml
relm-examples/examples/buttons-attribute/src/: main.rs
relm-examples/examples/http/: Cargo.toml
relm-examples/examples/http/src/: main.rs
relm-examples/examples/webkit-test/: Cargo.toml
relm-examples/examples/webkit-test/src/: main.rs
relm-examples/tests/: buttons-child-attribute.rs  buttons-construct-prop-attribute.rs  buttons-input.rs  buttons-test.rs  buttons.relm  checkboxes.rs  child-event.rs  child-prop-attribute.rs  child-prop.rs  communication-attribute.rs  communication.rs  container-attribute.rs  container.rs  generic-widget-attribute.rs  generic-widget.rs  grid-attributes.rs  include.rs  input-test.rs  key-events-attribute.rs  key-events.rs  model-param-attribute.rs  model-param-widget-attribute.rs  model-param.rs  model-params-attribute.rs  multi-container-attribute.rs  multi-container.rs  multi-generic-widget-attribute.rs  multi-generic-widget.rs  multiple-widgets-attribute.rs  multiple-widgets.rs  references.rs  references2.rs  relm-root-attribute.rs  relm-root.rs  simple.rs  text-fields-prop-attribute.rs
relm-gen-widget/: Cargo.toml
relm-gen-widget/src/: adder.rs  gen.rs  lib.rs  parser.rs  remover.rs  transformer.rs  walker.rs
relm-io/: Cargo.toml
relm-state/: Cargo.toml
relm-state/src/: component.rs  lib.rs  macros.rs
relm-test/: Cargo.toml
relm-test/src/: functions.rs  lib.rs  macros.rs  observer.rs
src/: callback.rs  component.rs  container.rs  drawing.rs  gtk_ext.rs  into.rs  lib.rs  macros.rs  option.rs  prelude.rs  stream.rs  widget.rs
tests/: buttons-child-attribute.rs  buttons-construct-prop-attribute.rs  buttons-input.rs  buttons-test.rs  buttons.relm  checkboxes.rs  child-event.rs  child-prop-attribute.rs  child-prop.rs  communication-attribute.rs  communication.rs  container-attribute.rs  container.rs  generic-widget-attribute.rs  include.rs  (+19 more)
(+13 files in other folders)
