[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Attributes to simplify the use of the relm crate"
documentation = "https://docs.rs/relm-attributes/"
license = "MIT"
name = "relm-attributes"
repository = "https://github.com/antoyo/relm"
version = "0.14.0"

[dependencies]
env_logger = "0.5"
log = "0.4"
quote = "^0.4.2"
syn = "^0.12.13"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.14.0"

[lib]
proc-macro = true

[features]
unstable = ["relm-gen-widget/unstable"]
