[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Attributes to simplify the use of the relm crate"
documentation = "https://docs.rs/relm-attributes/"
license = "MIT"
name = "relm-attributes"
repository = "https://github.com/antoyo/relm"
version = "0.15.0"

[dependencies]
quote = "0.6"

[dependencies.syn]
features = ["full"]
version = "0.15"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.15.0"

[lib]
proc-macro = true

[features]
unstable = ["relm-gen-widget/unstable"]
