[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Core streams and event loop primitives for asynchronous GUI in Rust. Foundation for the relm crate."
documentation = "https://docs.rs/relm-core/"
license = "MIT"
name = "relm-core"
repository = "https://github.com/antoyo/relm"
version = "0.15.0"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
libc = "^0.2.39"

[dev-dependencies]
chrono = "0.4"
