[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Core streams and event loop primitives for asynchronous GUI in Rust. Foundation for the relm crate."
documentation = "https://docs.rs/relm-core/"
license = "MIT"
name = "relm-core"
repository = "https://github.com/antoyo/relm"
version = "0.15.2"

[dependencies]
glib = "^0.7.0"
glib-sys = "^0.8.0"
gtk = "^0.6.0"
libc = "^0.2.39"

[dev-dependencies]
chrono = "0.4"
glib = "^0.7.0"
