[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Common derive implementation internally used by relm crates"
license = "MIT"
name = "relm-derive-common"
repository = "https://github.com/antoyo/relm"
version = "0.14.6"

[dependencies]
proc-macro2 = "^0.4.3"
quote = "0.6"
syn = "0.14"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.14.0"

[features]
unstable = ["relm-gen-widget/unstable"]
