[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Common derive implementation internally used by relm crates"
license = "MIT"
name = "relm-derive-common"
repository = "https://github.com/antoyo/relm"
version = "0.15.3"

[dependencies]
proc-macro2 = "^0.4.3"
quote = "0.6"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "0.15"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.15.0"

[features]
unstable = ["relm-gen-widget/unstable"]
