[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Custom derive required by the relm-state crate."
license = "MIT"
name = "relm-derive-state"
version = "0.12.0"
repository = "https://github.com/antoyo/relm"

[lib]
proc-macro = true

[dependencies]
syn = "^0.11.8"

[dependencies.relm-derive-common]
path = "../relm-derive-common"
version = "^0.12.0"
