[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Custom derive required by the relm-state crate."
license = "MIT"
name = "relm-derive-state"
repository = "https://github.com/antoyo/relm"
version = "0.14.4"

[lib]
proc-macro = true

[dependencies]
syn = "0.14"

[dependencies.relm-derive-common]
path = "../relm-derive-common"
version = "^0.14.0"

[features]
unstable = ["relm-derive-common/unstable"]
