[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Custom derive required by the relm crate."
documentation = "https://docs.rs/relm-derive/"
license = "MIT"
name = "relm-derive"
repository = "https://github.com/antoyo/relm"
version = "0.14.4"

[lib]
proc-macro = true

[dependencies]
quote = "0.5"
syn = "0.13"

[dependencies.relm-derive-common]
path = "../relm-derive-common"
version = "^0.14.0"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.14.0"

[features]
unstable = ["relm-derive-common/unstable", "relm-gen-widget/unstable"]
