[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Custom derive required by the relm crate."
documentation = "https://docs.rs/relm-derive/"
license = "MIT"
name = "relm-derive"
repository = "https://github.com/antoyo/relm"
version = "0.18.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.0"
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
features = ["extra-traits", "fold", "full", "visit"]
version = "^0.15"
