[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Custom derive required by the relm crate."
homepage = "https://relm.antoyo.xyz/"
documentation = "https://docs.rs/relm-derive/"
license = "MIT"
name = "relm-derive"
repository = "https://github.com/antoyo/relm"
version = "0.23.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.0"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
features = ["extra-traits", "fold", "full", "visit"]
version = "^1.0"

[dev-dependencies]
gtk = "^0.15.0"
relm = { path = ".." }
trybuild = "1.0.42"
