[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Examples for relm"
license = "MIT"
name = "relm-examples"
version = "0.23.0"
edition = "2018"

[dev-dependencies]
chrono = "0.4"
gdk = "^0.15.0"
glib = "^0.15.0"
gtk = "^0.15.0"
gtk-test = "^0.15.0"
rand = "^0.6.1"

[dev-dependencies.gio]
version = "^0.15.0"

[dev-dependencies.relm]
path = ".."
version = "^0.23.0"

[dev-dependencies.relm-derive]
path = "../relm-derive"
version = "^0.23.0"

[dev-dependencies.relm-test]
path = "../relm-test"
version = "^0.23.0"
