[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Examples for relm"
license = "MIT"
name = "relm-examples"
version = "0.24.0"
edition = "2018"

[dev-dependencies]
chrono = "0.4"
gdk = "^0.16.0"
glib = "^0.16.0"
gtk = "^0.16.0"
gtk-test = "^0.16.0"
rand = "0.8.5"

[dev-dependencies.gio]
version = "^0.16.0"

[dev-dependencies.relm]
path = ".."
version = "^0.24.0"

[dev-dependencies.relm-derive]
path = "../relm-derive"
version = "^0.24.0"

[dev-dependencies.relm-test]
path = "../relm-test"
version = "^0.24.0"

[dev-dependencies.adw]
package = "libadwaita"
version = "0.4.3"
