[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Utility crate for relm-attributes and relm-derive"
documentation = "https://docs.rs/relm-gen-widget/"
license = "MIT"
name = "relm-gen-widget"
repository = "https://github.com/antoyo/relm"
version = "0.14.4"

[dependencies]
lazy_static = "1.0"
proc-macro2 = "0.3"
quote = "0.5"

[dependencies.syn]
features = ["extra-traits", "fold", "full", "visit"]
version = "^0.13"

[features]
unstable = ["proc-macro2/nightly"]
