[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Utility crate for relm-attributes and relm-derive"
documentation = "https://docs.rs/relm-gen-widget/"
license = "MIT"
name = "relm-gen-widget"
repository = "https://github.com/antoyo/relm"
version = "0.15.2"

[dependencies]
lazy_static = "1.0"
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
features = ["extra-traits", "fold", "full", "visit"]
version = "^0.15"

[features]
unstable = ["proc-macro2/nightly"]
