[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "relm-state"
version = "0.1.0"

[dependencies]
log = "^0.3.7"

[dependencies.futures]
git = "https://github.com/alexcrichton/futures-rs"

[dependencies.futures-glib]
git = "https://github.com/antoyo/futures-glib-rs"

[dependencies.relm-core]
path = "../relm-core"
version = "^0.1.1"
