[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["development-tools::testing", "gui"]
description = "Testing library for relm"
homepage = "https://relm.antoyo.xyz/"
documentation = "https://docs.rs/relm-test/"
license = "MIT"
name = "relm-test"
repository = "https://github.com/antoyo/relm"
version = "0.23.0"
edition = "2018"

[dependencies]
enigo = "^0.0.14"
gdk = "^0.15.0"
glib = "^0.15.0"
gtk = "^0.15.0"
gtk-test = "^0.15.0"

[dependencies.relm]
path = ".."
version = "^0.23.0"
