[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["development-tools::testing", "gui"]
description = "Testing library for relm"
homepage = "https://relm.antoyo.xyz/"
documentation = "https://docs.rs/relm-test/"
license = "MIT"
name = "relm-test"
repository = "https://github.com/antoyo/relm"
version = "0.24.0"
edition = "2018"

[dependencies]
enigo = "^0.0.14"
gdk = "0.16.0"
glib = "0.16.2"
gtk = "0.16.1"
gtk-test = "0.16.0"

[dependencies.relm]
path = ".."
version = "^0.24.0"
