[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "async"
version = "0.1.0"

[dependencies]
gtk = "^0.5.0"
gtk-sys = "^0.7.0"

[dependencies.gio]
features = ["v2_50"]
version = "^0.5.0"

[dependencies.relm]
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"
