[package]
name = "buttons-attribute"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
gtk = "^0.5.0"
gtk-test = "^0.2"

[dependencies.relm]
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"

[dependencies.relm-test]
path = "../../relm-test"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
