[package]
name = "http"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
futures = "^0.1.10"
gdk-pixbuf = "^0.1.1"
gdk-sys = "^0.3.3"
gtk = "^0.1.2"
json = "^0.11.5"
relm =  "^0.9.0"
relm-derive = "^0.9.0"
simplelog = "^0.4.2"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"
