[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "http"
version = "0.1.0"

[dependencies]
futures = "^0.1.10"
gdk = "^0.5.3"
gdk-pixbuf = "^0.1.1"
gdk = "^0.5.3"
gtk = "^0.1.2"
json = "^0.11.5"
simplelog = "^0.4.2"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"

[dependencies.relm]
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"
