[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "http"
version = "0.1.0"

[dependencies]
gdk = "^0.8.0"
gdk-pixbuf = "^0.4.0"
gio = "^0.4.0"
glib = "^0.5.0"
glib-sys = "^0.6.0"
gtk = "^0.4.0"
json = "^0.11.5"
simplelog = "^0.4.2"
uhttp_uri = "^0.5.1"

[dependencies.relm]
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"

[features]
default = ["gtk/v3_22", "relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
