[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "webkit-test"
version = "0.1.0"

[dependencies]
futures = "^0.1.10"
gtk = "^0.1.2"
relm = { path = "../.." }
relm-attributes = { path = "../../relm-attributes" }
relm-derive = { path = "../../relm-derive" }

[dependencies.webkit2gtk]
branch = "crate"
git = "https://github.com/antoyo/webkit2gtk-rs"
version = "^0.1"
