[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "webkit-test"
version = "0.1.0"

[dependencies]
futures = "^0.1.10"
gtk = "^0.2.0"
webkit2gtk = "^0.1.0"

[dependencies.relm]
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"
