[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "webkit-test"
version = "0.1.0"

[dependencies]
futures = "^0.1"
gtk = "^0.3"
webkit2gtk = "^0.3"

[dependencies.relm]
default-features = false
path = "../.."

[dependencies.relm-attributes]
path = "../../relm-attributes"

[dependencies.relm-derive]
path = "../../relm-derive"
