[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "async"
version = "0.1.0"
edition = "2018"

[dependencies]
glib = "0.10.0"
gtk = "^0.9.0"

[dependencies.gio]
features = ["v2_50"]
version = "^0.9.0"

[dependencies.relm]
path = "../../.."

[dependencies.relm-derive]
path = "../../../relm-derive"
