[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "async"
version = "0.1.0"
edition = "2018"

[dependencies]
glib = "0.18"
gtk = "0.18"

[dependencies.gio]
features = ["v2_58"]
version = "0.18"

[dependencies.relm]
path = "../../.."

[dependencies.relm-derive]
path = "../../../relm-derive"
