[package]
name = "buttons-attribute"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
edition = "2018"

[dependencies]
gtk = "^0.14.0"
gtk-test = "^0.7"

[dependencies.relm]
path = "../../.."

[dependencies.relm-derive]
path = "../../../relm-derive"

[dependencies.relm-test]
path = "../../../relm-test"
