[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "http"
version = "0.1.0"
edition = "2018"

[dependencies]
gdk = "^0.13.0"
gdk-pixbuf = "^0.9.0"
gio = "^0.9.0"
glib = "^0.10.0"
glib-sys = "^0.10.0"
gtk = "^0.9.0"
json = "^0.11.5"
simplelog = "^0.5.3"
uhttp_uri = "^0.5.1"

[dependencies.relm]
path = "../../.."

[dependencies.relm-derive]
path = "../../../relm-derive"
