[package]
name = "flight_booker"
version = "0.1.0"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2018"

[dependencies]
glib = "0.14.0"
gtk = "^0.14.0"
chrono = "0.4.19"
gdk = "^0.14.0"

[dependencies.gio]
features = ["v2_50"]
version = "^0.14.0"
[dependencies.relm]
path = "../../../.."

[dependencies.relm-derive]
path = "../../../../relm-derive"
