[package]
name = "crud"
version = "0.1.0"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2018"

[dependencies]
glib = "0.18"
gtk = "0.18"

[dependencies.gio]
features = ["v2_58"]
version = "0.18"

[dependencies.relm]
path = "../../../.."

[dependencies.relm-derive]
path = "../../../../relm-derive"
